--- a/JS/index.html
+++ b/JS/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle do Modo</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="assets/cat-solid.svg" type="image/x-icon">
 </head>
 <body>
    
